<resources>
    <string name="app_name">ReFind</string>
    <string name="title_activity_perfin_anunciante">Map</string>


    <string name="bibliografia">Bibliografia</string>
    <string name="fotoPrueba">fotoPrueba</string>
    <string name="tituloPrueba">titulo Prueba</string>
    <string name="descripcionPrueba">descripcion Prueba</string>


    <!-- Strings de: Activity : PERFIL -->
    <string name="nombre">Nombre</string>
    <string name="apellido1">Apellido</string>
    <string name="newBiografi">Nueva biografia</string>
    <string name="nombreUsuario">Ej_Alvaro</string>
    <string name="desFotoUsuario">Foto del usuario</string>
    <string name="editarPerfil">Configuración</string>
    <string name="tvSeguidores">Seguidores</string>
    <string name="tvSiguiendo">Siguiendo</string>
    <string name="tvComentario">Comentarios</string>
    <string name="tvNSeguidores">0</string>
    <string name="tvNSiguiendo">0</string>
    <string name="tvNComentario">0</string>
    <string name="biografiaEjemplo">Bibliografia de ejemplo. Di lo que te gusta</string>

    <!-- Strings de: Activity : REGISTRO -->
    <string name="logo_Registro">Logo de Refind</string>
    <string name="emailRegistro">Correo electronico </string>
    <string name="nombreRegistro">Nombre</string>
    <string name="apellidoRegistro">Apellido</string>
    <string name="passRegistro">Contraseña</string>
    <string name="passComRegistro">Repita la contraseña</string>
    <string name="iniciarSesionRegistro">Iniciar Sesion</string>
    <string name="registrarRegistro">Registrarse</string>

    <!-- Strings de: Activity : PERFIL -->
    <string name="nombre_anuncio">IES ATAULFO ARGENTA</string>
    <string name="informacion">Informacion</string>
    <string name="comentarios">Comentarios</string>
    <string name="descripcion_anuncio">Descripcion de prueba</string>
    <string name="descripcion_flecha">Volver a inicio</string>
    <string name="musica">Musica</string>
    <string name="favOff">Se ha quitado de favoritos</string>
    <string name="favOn">Se ha añadido de favoritos</string>
    <string name="descripcionBSalir">Boton para salir de la sesion</string>

    <!-- Strings de: Activity : LOGIN -->
    <string name="descripcionLogo">Logo de ReFind</string>
    <string name="email_login">Correo electronico </string>
    <string name="passLogin">Contraseña</string>
    <string name="iniciarSesionLogin">Iniciar Sesion</string>
    <string name="mensajeParaRegistro">¿Aun no tienes una cuenta?</string>
    <string name="btnRegistro">Registrate</string>
    <string name="check">¿Eres mayor de 18?</string>
    <string name="telefono">Telefono</string>

    <!-- Menu contextual AL DEJAR PULSADO-->
    <string name="action_quitarF">Cancelar</string>
    <string name="action_ponerF">Llamar</string>
    <string name="llamando">Cancelada la llamada</string>

    <!-- Strings de: Menu : Navegation_items -->
    <string name="menuPrincipal">Inicio</string>
    <string name="menuFavorito">Favoritos</string>
    <string name="menuPerfil">Perfil</string>


    <!-- Strings de: Activity : MAIN - list_element -->
    <string name="icoImageView">Icono de imagen</string>
    <string name="TituloEjemplo">Titulo Ejemplo</string>
    <string name="descripcionEjemplo">Descripcion Ejemplo</string>
    <string name="descripcion">Descripcion</string>
    <string name="statusTextView">Activo</string>
    <string name="title_activity__anunciante">Map</string>
    <string name="title_activity_anunciante">Map</string>
    <string name="title">Title</string>
    <string name="title_activity_acivity_anuncio">Map</string>
    <string name="title_activity_anuncio">Map</string>


    <!-- String de popup emergente-->
    <string name="editarPopup">Editar el perfil</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="popNombre">Introduce tu nuevo nombre</string>
    <string name="popApellido">Introduce tu nuevo apellido</string>
    <string name="popBiografia">Introduce tu nueva biografai</string>


    <!--LISTAS -->
    <string name="listaCategorias">Categorias</string>
    <string name="listaAnuncios">Anuncios</string>
    <string name="listaFavoritos">Favoritos</string>
    <string name="autor">Autor</string>
    <string name="tCategoria">Titulo de la categoria</string>
    <string name="dCategoria">Descripcion de la categoria</string>
    <string name="comentairo">Comentario del autor</string>
    <string name="tAnuncio">Titulo del anuncio</string>
    <string name="dAnuncio">Descripcion del anuncio</string>


    <!--Permisos -->
    <string name="necesitaPermisos">Necesitas activar los permisos de la app</string>
    <string name="volverintentar">Vuelva a intentarlo</string>
    <string name="denegarPermisos">No, gracias</string>

    <!--Exitos -->
    <string name="bienvenida">Bienvenido</string>
    <string name="comentarioInsertado">Comentario añadido con exito</string>
    <string name="addFavoritosOk">Se ha añadido a favoritos con exito</string>
    <string name="sonidoActivado">Se ha activado el sonido</string>
    <string name="sonidoDesactivado">Se ha desactivado el sonido</string>
    <string name="actualizacionCorrecta">Se ha actualizado correctamente</string>
    <!--Errores -->

    <string name="error18">Debes tener mas de 18 para usar esta aplicación</string>
    <string name="errorPassNoIguales">Las contraseñas no coinciden</string>
    <string name="todosCamposOk">Debes rellenar todos los campos</string>
    <string name="pass9">La contraseña tiene que tener como minimo 9 caracteres</string>
    <string name="errorRegistroCorreoDupli">Correo ya en uso</string>
    <string name="errorLogin">Error al iniciar sesion</string>
    <string name="errorInsertarComentario">No se ha podido añadir el comentario</string>
    <string name="errorObtenerComent">No se pudieron obtener los comentarios</string>
    <string name="errorConexion">Error en la conexion</string>
    <string name="errorCargarImagen">Error al cargar la imagen</string>
    <string name="errorQuitarfavo">No se puedo quitar de favoritos</string>
    <string name="errorAñadirfavo">No se puedo añadir a favoritos</string>
    <string name="catNoAnuncios">Esta categoria no tiene anuncios todavia</string>
    <string name="noFavoritos">Todavia no tienes favoritos</string>
    <string name="errorObtenerDatosUsuario">Error al obtener los datos del usuario</string>
    <string name="errorCargarCategoria">Error al cargar la categoria</string>
    <string name="errorActualizarUsuario">Error al actualizar usuario</string>
    <string name="errorInsertarImagen">Error al insertar imagen</string>
    <string name="tamanoTelefonoError">El tamaño del telefono no es correcto</string>
</resources>