<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UselessLeaf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistro">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/fotoUsuario"
            android:layout_width="125dp"
            android:layout_height="121dp"
            android:layout_marginStart="140dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo_Registro"
            app:srcCompat="@drawable/ic_icon_refind" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailRegistro"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/emailRegistro"
                android:gravity="center"
                android:hint="@string/emailRegistro"
                android:inputType="textEmailAddress"

                />

            <EditText
                android:id="@+id/nombreRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nombreRegistro"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/apellidoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/apellidoRegistro"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/apellidoRegistro"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/passRegistro"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/passRegistro"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/passComRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:autofillHints="@string/passRegistro"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/passComRegistro"
                android:inputType="textPassword" />

            <com.google.android.material.checkbox.MaterialCheckBox
                style="?attr/checkboxStyle"
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check"
                >

            </com.google.android.material.checkbox.MaterialCheckBox>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/iniciarSesionRegistro"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="irLogin"
                    android:text="@string/iniciarSesionRegistro" />

                <Button
                    android:id="@+id/registrarRegistro"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_marginStart="40dp"
                    android:onClick="registrarUsuario"
                    android:text="@string/registrarRegistro" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
