<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:fontFamily="@font/akaya_kanadaka_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarPerfil"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/imgPopup"
        android:layout_width="126dp"
        android:layout_height="118dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/ic_casa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/descripcionLogo" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPopup" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <EditText
            android:id="@+id/popupNombre"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/popNombre"
            android:textSize="14sp"
            app:layout_editor_absoluteX="25dp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/popupApellido"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/popApellido"
            android:textSize="14sp"
            app:layout_editor_absoluteX="25dp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/popupBiografia"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/popBiografia"
            android:textSize="14sp"
            app:layout_editor_absoluteX="25dp"
            android:autofillHints=""
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCGuardar"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/btnGuardar" />

            <Button
                android:id="@+id/btnCCancelar"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/btnCancelar" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>