<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityActualizarAnuncio">

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="620dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ajustesImagen"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnElegirImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Elegir Imagen" />

        <TextView
            android:id="@+id/textNuevoTitulo"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:text="@string/title"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editNuevoTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:minHeight="48dp" />


        <TextView
            android:id="@+id/textNuevoTel"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:text="@string/telefono"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editNewTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:minHeight="48dp" />


        <TextView
            android:id="@+id/textDescrp"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/descripcion" />

        <EditText
            android:id="@+id/editDescrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:minHeight="48dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAjustesAceptar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="Aceptar" />

            <Button
                android:id="@+id/btnAjustesCancelar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancelar" />
        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>