<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="createNewContactDialog"
    tools:context=".ActivityPerfil">

    <TextView
        android:id="@+id/apellidoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nombreUsuario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/fotoUsuario"
        app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />

    <Switch
        android:id="@+id/swSonido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/musica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logOut" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fotoUsuario"
        android:layout_width="125dp"
        android:layout_height="121dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/desFotoUsuario"
        android:src="@drawable/icono_basico_perfil"
        app:civ_border_color="#99000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editarPerfil"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="createNewContactDialog"
        android:text="@string/editarPerfil"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoUsuario"
        tools:text="@string/editarPerfil" />

    <TextView
        android:id="@+id/nombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/nombreUsuario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/fotoUsuario"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_logout"
        app:layout_constraintBottom_toTopOf="@+id/editarPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--<LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editarPerfil">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeguidores"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="45dp"
                android:gravity="center"
                android:text="@string/tvSeguidores"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSiguiendo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="45dp"
                android:gravity="center"
                android:text="@string/tvSiguiendo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvComentario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvComentario"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNSeguidores"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/tvNSeguidores"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNSiguiendo"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:text="@string/tvNSeguidores"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNComentario"
                android:layout_width="97dp"
                android:layout_height="match_parent"
                android:text="@string/tvNComentario"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>-->


    <TextView
        android:id="@+id/tvBibliografia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/tvLinea"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editarPerfil" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/bottom_nav" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

